fixed hero layout issue

--- a/assets/css/modules/hero.css
+++ b/assets/css/modules/hero.css
@@ -14,9 +14,9 @@
 
 .hero-module > img {
   position: absolute;
-  top: -40px;
+  top: 0px;
   width: 100%;
-  height: 141.627%;
+  height: 100%;
   object-fit: cover;
   z-index: 1;
 }
@@ -37,15 +37,11 @@
 }
 
 .hero-content {
-  position: absolute;
   inset: 0;
   z-index: 3;
-
   display: flex;
   justify-content: center;
   align-items: center;
-
-  padding-top: 300px;
   text-align: center;
 }
 
